# jschema

./: jschema.cabal  stack.yaml
src/: JSchema.hs
