name:                jschema
version:             0.1.0.0
license:             BSD3
author:              Vladislav Zavialov
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     JSchema
  build-depends:       base >=4.9 && <4.10,
                       aeson,
                       scientific,
                       vinyl,
                       union,
                       singletons,
                       vector,
                       containers,
                       unordered-containers,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
